# bevy-ui-effect

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/: FUNDING.yml
examples/: basic.rs
src/: lib.rs  preset.rs
